refactor: enhance api get all classrooms
